Enabling support for additionalProperties
