# core-tests/e2e-tests/spring/spring-rest-openapi-v3/src/main/kotlin/com/foo/rest/examples/spring/openapi/v3/dtoreflectiveassert/DtoReflectiveAssertRest.kt
@@ -5,6 +5,7 @@ import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RestController
+import javax.validation.Valid
 
 @RestController
 class DtoReflectiveAssertRest {
@@ -53,5 +54,20 @@ class DtoReflectiveAssertRest {
     open fun enumType(@RequestBody body: EnumTypeDto) : ResponseEntity<String>{
         return ResponseEntity.ok("OK")
     }
+
+    @PostMapping(path = ["/additional-properties-inline"], consumes = [MediaType.APPLICATION_JSON_VALUE])
+    open fun additionalPropertiesInline(@RequestBody body: AdditionalPropsInlineDto) : ResponseEntity<String>{
+        return ResponseEntity.ok("OK")
+    }
+
+    @PostMapping(path = ["/additional-properties-ref"], consumes = [MediaType.APPLICATION_JSON_VALUE])
+    open fun additionalPropertiesRef(@RequestBody body: AdditionalPropsRefDto) : ResponseEntity<String>{
+        return ResponseEntity.ok("OK")
+    }
+
+//    @PostMapping(path = ["/additional-properties-no-root"], consumes = [MediaType.APPLICATION_JSON_VALUE])
+//    open fun additionalPropertiesNoRoot(@RequestBody body: AdditionalPropsNoRootDto) : ResponseEntity<String>{
+//        return ResponseEntity.ok("OK")
+//    }
 
 }
